update bread crumbs, fixed css z-index issues

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -84,3 +84,7 @@ h1 {
   font-size: 30px;
   line-height: 36px;
 }
+
+.breadcrumb {
+  margin-top: 5px;
+}
